FIX[#9] fixed issue of App component not covering the whole screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html,
 body {
-  background-color: var(--backgroundColor);
-  transition: 0.5s;
+  /* background-color: var(--backgroundColor); */
+  /* transition: 0.5s; */
   margin: 0;
   font-family: 'Roboto', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
